[package]
name = "egui_download_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = "0.19.0"
reqwest = "0.11.12"
tokio = { version = "1.21.2" , features=["full"]}
rfd = "0.10.0"